--- a/Hahn.ApplicationProcess.February2021.Web/appsettings.json
+++ b/Hahn.ApplicationProcess.February2021.Web/appsettings.json
@@ -2,12 +2,26 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HahnDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "Logging": {
-    "LogLevel": {
+
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Debug" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "log.txt",
+          "outputTemplate": "{Timestamp:G} {Message}{NewLine:1}"
+        }
+      }
+    ]
+  }
 }
