Fix validation and change Department enum

--- a/Hahn.ApplicationProcess.February2021.Web/appsettings.json
+++ b/Hahn.ApplicationProcess.February2021.Web/appsettings.json
@@ -9,8 +9,8 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
+        "Microsoft": "Information",
+        "System": "Error"
       }
     },
     "WriteTo": [
