--- a/Hahn.ApplicationProcess.February2021.Web/appsettings.json
+++ b/Hahn.ApplicationProcess.February2021.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HahnDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HahnDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=sqlserver;Database=HahnDB;User Id=sa;Password=BigPassw0rd"
   },
 
   "AllowedHosts": "*",
