Change sqlserver password

--- a/Hahn.ApplicationProcess.February2021.Web/appsettings.json
+++ b/Hahn.ApplicationProcess.February2021.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HahnDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=sqlserver;Database=HahnDB;User Id=sa;Password=BigPassw0rd"
+    "DefaultConnection": "Server=sqlserver;Database=HahnDB;User Id=sa;Password=Pass@word2021"
   },
 
   "AllowedHosts": "*",
